crates/kadou/src/ui/snapshots/kadou__ui__frame__tests__bare_frame_first_run_styled.snap
---
source: crates/kadou/src/ui/frame.rs
assertion_line: 430
expression: text
---
 [36m▸[0m [1mkadou[0m   2 kata

 starter
   hello       [32m●[0m low   Print a greeting
   disk-usage  [32m●[0m low   Disk usage of a directory

 run     kadou run                 pick one, or:  kadou run starter/hello
 new     kadou new <id>            write a kata and open it
 team    kadou get <git-url>       add your team's kata
 agents  kadou mcp serve
