crates/kadou/src/ui/snapshots/kadou__ui__frame__tests__check_report_styled.snap
---
source: crates/kadou/src/ui/frame.rs
assertion_line: 551
expression: text
---
[1m[31merror[0m: unknown arg type `string`
[2m  --> kata/sesami/x.sh:8:14[0m
 8 | #   app_name: string
[1m[31m   |               ^^^^^^[0m
   = arg types are text, int, bool, select

[1m[31mchecked 32 kata in sesami   1 error  0 warnings[0m
