crates/kadou/src/ui/snapshots/kadou__ui__frame__tests__run_header_plain.snap
---
source: crates/kadou/src/ui/frame.rs
assertion_line: 526
expression: plain
---
 ▸ sesami/ses-deploy  ● critical
   version=25.6.1.2  oke_cluster=uat
   needs  ✓ vault
 ────────────────────────────────────────────────────────────────────────
